# xlranker

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  publish.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/API/: index.html
dev/API/cli/: index.html
dev/API/config/: index.html
dev/API/lib/: index.html
dev/API/pipeline/: index.html
dev/assets/javascripts/: bundle.c8b220af.min.js
dev/search/: search_index.json
dev/usage/: index.html
dev/usage/CLI_options/: index.html
dev/usage/config/: index.html
dev/usage/output/: index.html
docs/: index.md
docs/API/: cli.md  index.md
docs/API/bio/: index.md  protein.md  protein_pair.md
docs/API/parsimony/: selection.md
docs/API/util/: readers.md
docs/usage/: config.md  index.md
docs/usage/CLI_options/: index.md
docs/usage/input_data/: custom_mapping_table.md  fasta.md  mapping_table.md  peptide_pairs.md
docs/usage/output/: reports.md
notebooks/: xlranker_example.ipynb
scripts/gmt/: README.md  create_gmt_db.py
src/xlranker/: __init__.py  cli.py  config.py  lib.py  pipeline.py  selection.py  status.py
src/xlranker/bio/: __init__.py  pairs.py  peptide.py  peptide_group.py  peptide_pair.py  protein.py  protein_pair.py
src/xlranker/data/: __init__.py  ppi.parquet
src/xlranker/ml/: __init__.py  data.py  models.py  selection.py
src/xlranker/models/: peptide.py  (+3 more)
tests/: test_fasta_mapping.py  test_protein.py  test_utils.py
util/ppi/: README.md  create_ppi_db.py
xlranker/: xlranker.py
xlranker/util/: math.py
(+20 files in other folders)
