[project]
name = "xlranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cyclopts>=3.15.0", "xgboost>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
xlr = "xlranker.cli:cli"
