[project]
name = "xlranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "cyclopts>=3.15.0",
    "polars>=1.29.0",
    "xgboost>=3.0.0",
]

[project.scripts]
xlranker = "xlranker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
]
